# Render

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
src/: definitions.h  render.cpp  render.h
src/pipeline/: audio.cpp  join.cpp  pipeline.h  segmentation.cpp  transcode.cpp  video.cpp
